// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ChannelForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  Channel Name:
   
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value=""
  />
  Channel Description:
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <p>
    Visible 
    <span />
    <span>
      <input
        checked={true}
        id="string"
        name="prop1"
        onChange={[Function]}
        type="checkbox"
      />
    </span>
  </p>
  <div>
    <button
      className="button"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`Should render ChannelForm with existing channel data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  Channel Name:
   
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value="Channel 1"
  />
  Channel Description:
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value="Test"
  />
  <p>
    Visible 
    <span />
    <span>
      <input
        checked={true}
        id="string"
        name="prop1"
        onChange={[Function]}
        type="checkbox"
      />
    </span>
  </p>
  <div>
    <button
      className="button"
    >
      Submit
    </button>
  </div>
</form>
`;
